Use a stack, not a queue, to remember externally connecting addresses.
This allows to ignore spurious external connections that didn't make it
through the proxy chain and result in an internal connection.
https://trac.torproject.org/projects/tor/ticket/7167#comment:38

--- a/mkii/Makefile
+++ b/mkii/Makefile
@@ -1,6 +1,6 @@
 GOBUILDFLAGS =
 
-obfs-flash-server: obfs-flash-server.go
+obfs-flash-server: obfs-flash-server.go stack.go
 	go build $(GOBUILDFLAGS) -o "$@" $^
 
 test:
