Add a fixed-size stack type.

--- a/mkii/Makefile
+++ b/mkii/Makefile
@@ -3,7 +3,10 @@ GOBUILDFLAGS =
 obfs-flash-server: obfs-flash-server.go
 	go build $(GOBUILDFLAGS) -o "$@" $^
 
+test:
+	go test -v
+
 clean:
 	rm -f obfs-flash-server
 
-.PHONY: clean
+.PHONY: test clean
