Added a loading configuration file on the server side. The format is identical to the client configuration file except ClientTransportationPlugin is ServerTransportationPlugin. Uses go-shellwords to parse the config files.

--- a/fog-server/Makefile
+++ b/fog-server/Makefile
@@ -1,6 +1,6 @@
 GOBUILDFLAGS =
 
-./fog-server: ./fog-server.go ./stack.go
+./fog-server: ./fog-server.go ./stack.go ./config.go
 	go build $(GOBUILDFLAGS) -o "$@" $^
 
 test:
