The files have been reorganized into a python and go project.

--- a/fog-server/Makefile
+++ b/fog-server/Makefile
@@ -1,12 +1,12 @@
 GOBUILDFLAGS =
 
-obfs-flash-server: obfs-flash-server.go stack.go
+./fog-server: ./fog-server.go ./stack.go
 	go build $(GOBUILDFLAGS) -o "$@" $^
 
 test:
 	go test -v
 
 clean:
-	rm -f obfs-flash-server
+	rm -f ./fog-server
 
 .PHONY: test clean
